# indexer

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust-ci.yml  web-ci.yml
src/: aql.rs  chat.rs  config.rs  db.rs  export.rs  gcal.rs  git.rs  gmail.rs  google_search.rs  indexing.rs  lib.rs  main.rs  notification.rs  oauth.rs  openai.rs  prompt.rs  public.rs  query.rs  schema.rs  search.rs  server.rs  source.rs  tool.rs  utils.rs
src/agents/: email.rs
src/fts/: mod.rs  schema.rs  utils.rs
src/jobs/: email_agent.rs  generate_session_titles.rs  mod.rs  process_email.rs  research_meeting_attendees.rs
src/tools/: calendar.rs  email.rs  mod.rs  note_search.rs  searxng.rs  web_search.rs  website_view.rs
tests/: integration_test.rs
tests/data/: gcal_response.json  google_search_results.json  searxng_search_results.json
web-ui/: biome.json  package-lock.json  package.json  tailwind.config.js
web-ui/src/: index.html  index.js  input.css  manifest.json  output.css  service-worker.js
web-ui/src/chat/: chat.js  index.html  index.js  message-bubble.js  sessions.html  sessions.js
web-ui/src/chat/sessions/: index.html  index.js
web-ui/src/metrics/: index.html  index.js
web-ui/src/search/: index.html  index.js
