[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
async-trait = "0.1.86"
axum = "0.7.5"
clap = { version = "4.5.17", features = ["derive"] }
erased-serde = "0.4.5"
fastembed = "4.1.0"
handlebars = "6.3.0"
http = "1.1.0"
itertools = "0.13.0"
orgize = "0.10.0-alpha.10"
rand = "0.8.5"
reqwest = { version = "0.12.12", features = ["json"] }
rusqlite = { version = "0.32.1", features = ["bundled", "load_extension"] }
rustyline = "15.0.0"
serde = "1.0.210"
serde_json = "1.0.128"
sqlite-vec = "0.1.3"
tantivy = "0.22.0"
text-splitter = { version = "0.16.1", features = ["tiktoken-rs"] }
tiktoken-rs = "0.5.9"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["trace", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
web-push = { version = "0.10.2", features = ["hyper-client"] }
zerocopy = "0.8.14"

[dev-dependencies]
serial_test = "3.2.0"
tower = { version = "0.5.2", features = ["util"] }
